# LLM-Powered-RAV

./: .gitignore  README.md
source/applications/: .dockerignore  Dockerfile  README.md  index.Dockerfile  pyproject.toml
source/applications/api/database-migration/: README.md  aerich_conf.py  chunk.json  pyproject.toml  requirements.txt  start_application.sh  token.json
source/applications/api/dataset-file-loader-prefect/: README.md  end_to_end_test.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/dataset-loader-prefect/: README.md  end_to_end_test.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/deployment-base/: README.md  pyproject.toml  requirements.txt
source/applications/api/file-converter-api/: README.md  dependencies.sh  end_to_end_test.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/file-converter-prefect/: README.md  end_to_end_test.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/file-embedding-prefect/: README.md  end_to_end_test.sh  end_to_end_test_local.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/file-index-prefect/: README_uploader.md  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/file-uploader-prefect/: end_to_end_test.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/grading-prefect/: README.md  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/graph-view/: README.md  compare_evaluation.sh  pyproject.toml  requirements.txt  start_application.sh  unittest.sh
source/applications/api/rag-prefect/: README.md  end_to_end_test.sh  end_to_end_test_local.sh  pyproject.toml  requirements.txt  start_application.sh
source/applications/api/simple-rag-api/: README.md  pyproject.toml  requirements.txt  start_application.sh  static
source/applications/api/trigger-evaluation-prefect/: README.md  pyproject.toml  requirements.txt  start_application.sh
source/applications/lib/config-database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/core/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/lib/database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/domain/: README.md  pyproject.toml  requirements.txt
source/applications/lib/domain-test/: README.md  pyproject.toml  requirements.txt
source/applications/lib/fact-store-database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/fastapi-core/: README.md  pyproject.toml  requirements.txt  start.sh
source/applications/lib/file-converter-client/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/lib/file-database/: README.md  pyproject.toml  requirements.txt
source/applications/lib/hippo-rag/: README.md  deepseek-r1  gpt  integrationstest.sh  integrationstest_local.sh  llama3.3  pyproject.toml  requirements.txt  unittest.sh
source/applications/lib/hippo-rag-database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/hippo-rag-graph/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/hippo-rag-vectore-store/: README.md  integrationstest.sh  integrationstest_local.sh  pyproject.toml  requirements.txt
source/applications/lib/llama-index-extension/: README.md  pyproject.toml  requirements.txt
source/applications/lib/openai-client/: README.md  integrationstest.sh  integrationstest_local.sh  pyproject.toml  requirements.txt
source/applications/lib/pdf-converter/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/lib/prefect-core/: README.md  pyproject.toml  requirements.txt  start.sh
source/applications/lib/project-database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/rest-client/: README.md  pyproject.toml  requirements.txt
source/applications/lib/s3/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/simple-rag/: README.md  integrationstest.sh  integrationstest_local.sh  llama2_paper.md  pyproject.toml  requirements.txt
source/applications/lib/text-embedding/: README.md  integrationstest.sh  integrationstest_local.sh  pyproject.toml  requirements.txt
source/applications/lib/text-splitter/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/lib/validation-database/: README.md  integrationstest.sh  pyproject.toml  requirements.txt
source/applications/lib/vector-db/: README.md  integrationstest.sh  integrationstest_local.sh  pyproject.toml  requirements.txt
source/applications/lib/word-converter/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/services/config-service/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/services/evaluation-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/file-converter-pipline-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/file-converter-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/file-embedding-pipline-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/file-uploader-service/: README.md  pyproject.toml  requirements.txt  unittest.sh
source/applications/services/grading-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/image-description-service/: README.md  pyproject.toml  requirements.txt
source/applications/services/rag-pipline-service/: README.md  pyproject.toml  pyrightconfig.json  requirements.txt
source/applications/shell_scripts/: build_docker.sh  end_to_end_test.sh  integrationtests.sh  start_sonar.sh  unittest.sh  update_requirements.sh
source/small_scripts/web-scraper/: README.md  pyproject.toml  start_application.sh
(+472 files in other folders)
