[project]
name = "applications"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
test = [
    "pysonar==1.2.0.2419",
]

[tool.uv.workspace]
members = [
    "api/*",
    "services/*",
    "lib/*",
]

[tool.ruff]
target-version = "py312"
