[project]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = [{ name = "Fabian Engel", email = "git-fabian-engel@proton.me" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "scrapy>=2.13.3",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
