[project]
name = "deployment-base"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core==0.2.0",
]

[project.optional-dependencies]
test = [
    "database==0.2.0",
    "hippo-rag-graph==0.2.0",
    "hippo-rag-vectore-store==0.2.0",
    "llama-index-extension==0.2.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.hippo-rag-graph]
workspace = true

[tool.uv.sources.hippo-rag-vectore-store]
workspace = true

[tool.uv.sources.database]
workspace = true

[tool.uv.sources.llama-index-extension]
workspace = true
