[project]
name = "grading-prefect"
version = "0.2.0"
description = ""
authors = [{ name = "Fabian Engel", email = "git-fabian-engel@proton.me" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "core==0.2.0",
  "domain==0.2.0",
  "database==0.2.0",
  "prefect-core==0.2.0",
  "validation-database==0.2.0",
  #"ollama-client==0.2.0",
  "openai-client==0.2.0",
  "grading-service==0.2.0",
  "text-embedding==0.2.0",
  "rest-client==0.2.0",
  "config-database==0.2.0",
  "config-service==0.2.0",
  "fact-store-database==0.2.0",
  "hippo-rag==0.2.0",
  "deployment-base==0.2.0",
]

[project.optional-dependencies]
test = ["testcontainers==4.13.2", "domain-test==0.2.0"]

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain]
workspace = true

[tool.uv.sources.database]
workspace = true

[tool.uv.sources.prefect-core]
workspace = true

[tool.uv.sources.validation-database]
workspace = true

[tool.uv.sources.ollama-client]
workspace = true

[tool.uv.sources.openai-client]
workspace = true

[tool.uv.sources.grading-service]
workspace = true

[tool.uv.sources.text-embedding]
workspace = true

[tool.uv.sources.rest-client]
workspace = true

[tool.uv.sources.config-database]
workspace = true

[tool.uv.sources.config-service]
workspace = true

[tool.uv.sources.fact-store-database]
workspace = true

[tool.uv.sources.hippo-rag]
workspace = true

[tool.uv.sources.domain-test]
workspace = true

[tool.uv.sources.deployment-base]
workspace = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
