[project]
name = "graph-view"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core==0.2.0",
    "domain==0.2.0",
    "fastapi-core==0.2.0",
    "validation-database==0.2.0",
    "evaluation-service==0.2.0",
    "database==0.2.0",
    "gradio==5.49.1",
    "config-database==0.2.0",
    "config-service==0.2.0",
    "matplotlib==3.10.7",
    "scikit-learn==1.7.2",
    "numpy==2.3.4",
    "deployment-base==0.2.0",
]

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain]
workspace = true

[tool.uv.sources.fastapi-core]
workspace = true

[tool.uv.sources.validation-database]
workspace = true

[tool.uv.sources.database]
workspace = true

[tool.uv.sources.evaluation-service]
workspace = true

[tool.uv.sources.config-database]
workspace = true

[tool.uv.sources.config-service]
workspace = true

[tool.uv.sources.deployment-base]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
