[project]
name = "trigger-evaluation-prefect"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core==0.2.0",
    "domain==0.2.0",
    "rest-client==0.2.0",
    "database==0.2.0",
    "evaluation-service==0.2.0",
    "validation-database==0.2.0",
    "deployment-base==0.2.0",
    "prefect-core",
]

[tool.uv.sources]
prefect-core = { workspace = true }

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain]
workspace = true

[tool.uv.sources.database]
workspace = true

[tool.uv.sources.rest-client]
workspace = true

[tool.uv.sources.evaluation-service]
workspace = true

[tool.uv.sources.validation-database]
workspace = true

[tool.uv.sources.deployment-base]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
