[project]
dependencies = [
    "pydantic==2.11.10",
    "opentelemetry-sdk==1.32.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.32.1",
    "opentelemetry-api==1.32.1",
    "opentelemetry-instrumentation-httpx==0.53b1",
    "charset-normalizer==3.4.4",
]
name = "core"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
