[project]
dependencies = [
    "pydantic==2.11.10",
    "core==0.2.0",
    "asyncpg==0.30.0",
    "tortoise-orm==0.25.1",
    "aerich==0.9.2",
]
name = "database"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
test = [
    "testcontainers==4.13.2",
    "domain-test==0.2.0",
]

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain-test]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
