[project]
name = "domain-test"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic==2.11.10",
    "core==0.2.0",
    "domain==0.2.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
]

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
