[project]
name = "file-converter-client"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic==2.11.10",
    "core==0.2.0",
    "rest-client==0.2.0",
]

[project.optional-dependencies]
test = [
    "domain-test==0.2.0",
]

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.rest-client]
workspace = true

[tool.uv.sources.domain-test]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
