[project]
name = "prefect-core"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core==0.2.0",
    "prefect==3.4.24",
]

[tool.uv.sources.core]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
