[project]
dependencies = [
    "domain==0.2.0",
    "pydantic==2.11.10",
    "llama-index-extension==0.2.0",
    "core==0.2.0",
]
name = "simple-rag"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

[project.optional-dependencies]
test = [
    "testcontainers==4.13.2",
    "rest-client==0.2.0",
    "domain-test==0.2.0",
]

[tool.uv.sources.domain]
workspace = true

[tool.uv.sources.rest-client]
workspace = true

[tool.uv.sources.llama-index-extension]
workspace = true

[tool.uv.sources.core]
workspace = true

[tool.uv.sources.domain-test]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
