[project]
name = "text-splitter"
version = "0.2.0"
description = ""
authors = [
    { name = "Fabian Engel", email = "git-fabian-engel@proton.me" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "domain==0.2.0",
    "pydantic==2.11.10",
    "pysbd==0.3.4",
    "tiktoken==0.12.0",
    "langdetect==1.0.9",
]

[project.optional-dependencies]
test = [
    "domain-test==0.2.0",
]

[tool.uv.sources.domain]
workspace = true

[tool.uv.sources.domain-test]
workspace = true

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
